Apple Special Event at Steve Jobs Theater

--- a/_posts/Diary/2017-10-12-Diary05.md
+++ b/_posts/Diary/2017-10-12-Diary05.md
@@ -40,7 +40,14 @@ Memories have especially come rushing back as we prepared for today this event.
 It's taken some time that we can now reflect on him with joy instead of sadness.
 Steve's spirit and timeless philosophy on life will always be the DNA of Apple.
 
-His greatesst gift, his greatest expression of his aprreciation for hum
+His greatesst gift, his greatest expression of his aprreciation for humanity would not be a
+singular product, but rather it would be Apple itself.
+We dedicate this theater to Steve because we loved him and because he loved days like this where he could share
+our latest new products and new ideas in the world. and we do so not only to pay tribute to Steve but to inspire the
+next generation of creators and innovators.
 
+Steve was a genius and one of many ~  that was in his uncanny ability to unlock the telent of everybody that he worked him.
+
+He thought deeply about our workplace and its surroundings. And he believed that they should inspire talented people to do their best work.so over a decade ago, he began to work on a new campus for apple.
 
 <br>
