--- a/_posts/Diary/2017-10-12-Diary05.md
+++ b/_posts/Diary/2017-10-12-Diary05.md
@@ -28,10 +28,9 @@ that's what's going to keep
 Apple, Apple, is if we keep us, us.
 
 I love hearing his voice and his inspiring message.
-it was only fitting that steve should open his theater.
+and it was only fitting that Steve should open his theater.
 
 It is the honor of a lifetime to be the first to welcome you to the Steve Jobs Theater.
-
 Steave meant too much to me and so much to all of us.
 
 There's not a day that goes by that we don't think about him.
@@ -46,8 +45,21 @@ We dedicate this theater to Steve because we loved him and because he loved days
 our latest new products and new ideas in the world. and we do so not only to pay tribute to Steve but to inspire the
 next generation of creators and innovators.
 
-Steve was a genius and one of many ~  that was in his uncanny ability to unlock the telent of everybody that he worked him.
+Steve was a genius and one of the many ways that he showed that was in his uncanny ability to unlock the telent of everybody that he worked him.
 
 He thought deeply about our workplace and its surroundings. And he believed that they should inspire talented people to do their best work.so over a decade ago, he began to work on a new campus for apple.
 
-<br>
+his vision for Apple Park was to create an incredible workplace of the future where engineers and designers could all be together collaborating on the next generations of Apple product to change the world.
+
+Steve's vision and passion live on here at Apple Park and everywhere in Apple.
+
+Today and always, we honor him.
+
+We're here today to talk about some incredible products. But before we get to that, I'd like to take a moment to talk about what's happening in Florida and Texas, Southeatern United States and across the Caribbean.
+
+Our hearts go out to all of the people whose lives have been disrupted by hurricanes lrma and hurricane Harvey.
+You are in our thoughts. We send you our strength. You are in our prayers. Apple is working closely with relief and recovery efforts through Hand in Hand and the American Red Cross.
+
+And in addition to Apple's direct contribution we're making it really simple for the entire Apple community to donate via iTunes and the App Store.
+
+The Hand in Hand benefit for hurricane relief airs tonight on all of the major broadcast networks. And I encourage you to watch it. And how ever you choose to give, I hope that you open your heart to this important effort. Thank you.
