--- a/_posts/BooksnPapers/2017-11-27-MLnDL_Ch4.md
+++ b/_posts/BooksnPapers/2017-11-27-MLnDL_Ch4.md
@@ -28,3 +28,8 @@ sigmoid : $$ 1/(1 + e^{-u}) $$ \\
 
 recurrent network
 - 회귀망 구성 방법 : 홉필드 모델<br>
+
+
+4.2 역전파를 이용한 신경망 학습 \\
+perceptron : 입력층(자극층) - 중간층(연산층) - 출력층(응답층)으로 이루어진 계층형 신경망 \\
+- 가중치 및 문턱값 고정
