uploading 1st in december(12/04)

--- a/_posts/BooksnPapers/2017-01-01-Books01.md
+++ b/_posts/BooksnPapers/2017-01-01-Books01.md
@@ -17,3 +17,4 @@ image:
 #### Title : 책 and 논문
 책의 내용을 정리하고 논문의 내용을 정리하는것은 중요한것 같다.<br>
 내가 한달 일년 후 얼마나 많은 수의 책을 읽고 논문을 읽었는지 파악해보자!<br>
+책 논문만아니라 소스가 하나인것은 적도록하자 \\
