--- a/_posts/BooksnPapers/2017-10-12-SteveJobs01.md
+++ b/_posts/BooksnPapers/2017-10-12-SteveJobs01.md
@@ -2,7 +2,7 @@
 
 layout: post
 title: "Apple Special Event at Steve Jobs Theater"
-categories: diary
+categories: BooksnPapers
 tags: [documentation,diary]
 image:
  feature:
