--- a/_posts/Diary/2017-11-30-Diary06.md
+++ b/_posts/Diary/2017-11-30-Diary06.md
@@ -15,7 +15,27 @@ image:
 #### Time : 2017-11-30
 #### Feeling : Good!
 #### Title :
+어떻게 인생을 살아야할지는 내가 죽을때 까지 고민해야하는 것이다.\\
+그러나 삶을 살면서 내가 도전하고 할 수있는 것들은 줄어든다. \\
+그렇기에 난 하루하루 내가 선택한것이 정말로 맞는 것인가? 고민한다.\\
 여기는 오픈된 공간이기때문에 솔직히 적기가 그렇다. \\
 그러나 제목처럼 난 항상 생각하고 고민한다. 그리고 다시 생각한다. \\
 어떤 식으로 살아야 후회 없이 살 수 있으까? 하고.... \\
 시간도 한정적이고 능력도 한정적이다. \\
+
+
+Martin Fowler 저서 : 리팩토링: 프로그램의 가치를 높이는 코드 정리 기술(2012)
+~~~ c
+if(url == null)
+  return null;
+else
+  return url.getPath();
+--> url == null ? null : url.getPath();
+~~~
+장황한 내용은 의도를 파악하기 어렵다.\\
+
+step1. Making a Restaurant reservation\\
+the lesson title tells you what you will practice speaking today.\\
+
+Preview\\
+these sections list the lesson dialogue's key vocabulary and expressions.\\
