--- a/_posts/BooksnPapers/2017-11-27-MLnDL_Ch4.md
+++ b/_posts/BooksnPapers/2017-11-27-MLnDL_Ch4.md
@@ -12,6 +12,20 @@ image:
 
 ---
 
+#### Time : 2017-12-03
+#### Title : 1장 - 머신러닝이란?
+'처음 시작하는 머신러닝' 자매편에 해당함. \\
+1. DQN(Depp Q Network) : Volodymyr Mnih외 : Human-level control through deep reinforcement learning Nature, vol.518, pp.529-533(2015)
+2. ConvNet VGG : Karen Simonyan, Andreww Zisserman: Very Deep Convolutional networks for large-scale image recognition,LCLR 2015
+3. CD-DNN-HMM : frank seide, Gang Li,Dong Yu:Convolutional Speech Transcription Using Context-Dependent Deep Neural Networks, INTERSPEECH 2011
+
+1은 개임, 2는 이미지, 3은 음성에 대해서 딥러닝을 적용한 예임 \\
+2는 획기적으로 이미지 인식성능이 향상되었고 3은 음성에대해서도 노이즈가 많은상황속에서 성능이 향상되었음\\
+|
+
+
+
+
 #### Time : 2017-11-28
 #### Title : 신경망의 기초
 수식을 적는 방법을 찾아놨는데 한번도 안해봤다. 오늘은 시간이 늦었으므로 우선 그냥 쓴다.ㅡㅡ;<br>
