--- a/_posts/BooksnPapers/2017-11-27-MLnDL_Ch4.md
+++ b/_posts/BooksnPapers/2017-11-27-MLnDL_Ch4.md
@@ -16,15 +16,32 @@ image:
 #### Title : 1장 - 머신러닝이란?
 '처음 시작하는 머신러닝' 자매편에 해당함. \\
 1. DQN(Depp Q Network) : Volodymyr Mnih외 : Human-level control through deep reinforcement learning Nature, vol.518, pp.529-533(2015)
+[https://web.stanford.edu/class/psych209/Readings/MnihEtAlHassibis15NatureControlDeepRL.pdf]
 2. ConvNet VGG : Karen Simonyan, Andreww Zisserman: Very Deep Convolutional networks for large-scale image recognition,LCLR 2015
 3. CD-DNN-HMM : frank seide, Gang Li,Dong Yu:Convolutional Speech Transcription Using Context-Dependent Deep Neural Networks, INTERSPEECH 2011
 
 1은 개임, 2는 이미지, 3은 음성에 대해서 딥러닝을 적용한 예임 \\
 2는 획기적으로 이미지 인식성능이 향상되었고 3은 음성에대해서도 노이즈가 많은상황속에서 성능이 향상되었음\\
-|
+
+DQN : reinforcement learning + Deep learning(CNN)
+
+training dataset
+test dataset
 
 
 
+| 분 류 | 설 명 | 예 |
+|-|-|-|
+|지도 학습 | 사례와 이에 대한 정답이 쌍으로 제시, 이 학습 항목의 하나하나를 선생님이 가르치는 학습 | 이미지 인식&음성 인식 |
+|비지도 학습 | 주어진 학습 데이터를 머신러닝 시스템 자신이 판단하여 배우는 학습 | 입력 데이터의 자동분류 |
+|강화 학습 | 마지막 결과 평가만 주어지는 환경에서 학습 | Q 학습, DQN
+
+#### Time : 2017-12-05
+#### Title : 2장 - 귀납적 학습
+연역적 학습(deductive learning)
+귀납적 학습(indeuctive learning)
+
+강화학습 : 교사 데이터 작성 문제를 해결함과 동시에 잡음이나 오차 문제도 강화학습 원리 안에 흡수할 수 있음.
 
 #### Time : 2017-11-28
 #### Title : 신경망의 기초
