--- a/_posts/Diary/2017-11-30-Diary06.md
+++ b/_posts/Diary/2017-11-30-Diary06.md
@@ -25,6 +25,7 @@ image:
 
 
 Martin Fowler 저서 : 리팩토링: 프로그램의 가치를 높이는 코드 정리 기술(2012)
+
 ~~~ c
 if(url == null)
   return null;
@@ -39,3 +40,15 @@ the lesson title tells you what you will practice speaking today.\\
 
 Preview\\
 these sections list the lesson dialogue's key vocabulary and expressions.\\
+
+
+#### Time : 2017-12-11
+#### Feeling : Not bad!
+#### Title :
+
+오늘 결혼식 다녀오고 하루 종일 뒹굴뒹굴 놀다가 좋은 사이트를 발견했다.\\
+음......인문학도도 이정도 공부하고 열심히하는데 난.. ㅎㅎ \\
+인생에대해서 생각이 많은 계절이다. \\
+
+[모두를 위한 딥러닝/텐서플로우](https://m.blog.naver.com/jahyeha_/221151704818) \\
+[라온피플 머신러닝 아카데미](http://laonple.blog.me/220463627091)
