--- a/_posts/Archives/2018-05-13-Blog05_Pycharm01.md
+++ b/_posts/Archives/2018-05-13-Blog05_Pycharm01.md
@@ -65,7 +65,10 @@ http://egloos.zum.com/geneus/v/3536401 \\
 ~~~
 
 5장 Pandas를 이용한  데이터 분석 기초
+- 13 장 Pandas를 이용한 데이터 분석 기초를 기반으로 작성한다.
+- 1차원은 series, 2차원은 DataFrame이 효과적인 자료 구조임.
 - 나도모르는 라이브러리 이지만 배워두면 좋을 것같다.
+- series는 딕셔너리+리스트 자료구조체임 그러나 딕셔너리보다 더 편리하게 사용할 수 있도록 구현된 자료 구조체임.
 - Series\\
 ~~~ python
   # 리스트
@@ -81,9 +84,12 @@ http://egloos.zum.com/geneus/v/3536401 \\
   mine   = Series([10, 20, 30], index=['naver', 'sk', 'kt'])
   friend = Series([10, 30, 20], index=['kt', 'naver', 'sk'])
 ~~~
-- 위 와 같이 선언하면 mine + friend 하면 알아서 더해준다고 한다. 엄청 편하기는 하네...
+- 예로 위 와 같이 선언하면 mine + friend 하면 알아서 더해준다고 한다. 엄청 편하기는 하네...
+- mine.index를 치면 key값만 return되므로 key값 알고 싶거나 searching하고 싶을때 유용함.
 
 - DataFrame
+- series는 1차원 데이터 표현하고 다룰때는 유용하나 columns이 여러개인 2차원 데이터는 힘듬.
+- 그래서 도입된 자료 구조체임.
 ~~~ python
   daeshin = {'open':  [11650, 11100, 11200, 11100, 11000],
              'high':  [12100, 11800, 11200, 11100, 11150],
@@ -99,13 +105,64 @@ http://egloos.zum.com/geneus/v/3536401 \\
   day_data = daeshin_day.ix['16.02.24']
   print(day_data)
 ~~~
-
-
-
 - 엄청 변하게 데이터를 정렬하고 수정할 수 있게 할 수 있게 해준다. 엄청 편하기는 하다.
 - 사실 이 예제는 내가 지금 공부하고 있는 사이트에 있는거여서 적기가 좀 그렇기는하지만 참 편하게 데이터를 갖고 놀수 있기는하다
 
 6장 matplotlib를 이용한 데이터 시각화
+- 16-6-2 PyQt와 matplotlib연동 그래프그리기 참조함.
+- 위 예제를 분석하면 matplotlib사용법 qt gui사용법을 알 수 있다.
+- 그러나 위 예제를 좀 수정해야 잘 사용할 수 있다.
+~~~ python
+# main function 실행시 필요
+import sys
+
+# widget을 만들때 필요.
+from PyQt5.QtWidgets import *
+from PyQt5.QtGui import *
+
+# plot하려면 필요
+import matplotlib.pyplot as plt
+# pyqt와 matlib 연결해서 그리려면 필요
+# PyQt내에서 사용하기위해서 FigureCanvasQTAgg 클래스를 import함.
+from matplotlib.backends.backend_qt5agg import FigureCanvasQTAgg as FigureCanvas
+
+# 주가 분석 시 필요.
+import pandas_datareader.data as web
+import fix_yahoo_finance as yf
+yf.pdr_override()
+
+# FigureCanvas 객체 생성
+self.fig = plt.Figure()
+self.canvas = FigureCanvas(self.fig)
+
+# 레이아웃과 fig연결.
+leftLayout = QVBoxLayout()
+leftLayout.addWidget(self.canvas)
+
+layout = QHBoxLayout()
+layout.addLayout(leftLayout)
+layout.setStretchFactor(leftLayout, 1) # 1은 normalized on 0은 off임.
+
+code = self.lineEdit.text()
+start_date = '1996-05-06'
+df = web.get_data_yahoo(code, start_date)
+# 위처럼 쓰면 데이터를 가져올 수 있다.
+df['MA20'] = df['Adj Close'].rolling(window=20).mean()
+df['MA60'] = df['Adj Close'].rolling(window=60).mean()
+
+
+self.fig.clear()
+ax = self.fig.add_subplot(111)
+ax.plot(df.index, df['Adj Close'].get_values(), label='Close')
+ax.plot(df.index, df['MA20'].get_values(), label='MA20')
+ax.plot(df.index, df['MA60'].get_values(), label='MA60')
+ax.legend(loc='upper right')
+ax.grid(True)
+
+self.canvas.draw()
+~~~
+- 사실 위에 있는 있는 구문을 이해하면 일단 이해는 성공했다고 할 수 있다.
+
 
 7장 PyQT를 이용한 GUI 프로그래밍
 7장-1 :
@@ -142,3 +199,32 @@ http://egloos.zum.com/geneus/v/3536401 \\
 ~~~
 - 위에서 변수이름은 qt creator에서 선언해준 이름이므로 알고 있어야한다.
 - visual studio나 matlab에서는 클릭하면 가므로 이름을 외우지 않아도 되는데 여기서는 외워야할 것같다.
+
+8장 주가 데이터 저장하기
+- 사실 주가 데이터 저장에는 관심이 없지만 sql에는 관심이 많다. 그러므로 이 장도 공부를 한다.
+- Database Management System에는 여러가지 프로그램이 있습니다.
+- 우선 SQLite를 배우고 Oracle, PostgreSQL and MySQL을 익히면 될것 같습니다.
+- 글을 읽어보내 내용은 어렵지 않다.
+~~~ python
+import sqlite3
+
+print(sqlite3.version)
+
+print(sqlite3.sqlite_version)
+
+con = sqlite3.connect("/Users/youngjookim/PycharmProjects/Hello_PyQt/kospi.db")
+
+cursor = con.cursor()
+
+cursor.execute("CREATE TABLE kakao(Date text, Open int, High int, Low int, Closing int, Volumn int)")
+
+cursor.execute("INSERT INTO kakao VALUES('16.06.03', 97000, 98600, 96900, 98000, 321405)")
+
+# 여기서 맹점은 INSERT INTO 나 CREATE TABLE 같은것은 내부 명령어이기 때문에 python에서는 인식을 하지 못한다.
+
+con.commit()
+con.close()
+~~~
+- 그리고 난 mac을 사용하므로 mac용 DB Brower for SQLite를 받아야한다.
+- [링크](https://www.macupdate.com/app/mac/38584/db-browser-for-sqlite#)
+- 
