--- a/_posts/Archives/2018-05-13-Blog05_Pycharm01.md
+++ b/_posts/Archives/2018-05-13-Blog05_Pycharm01.md
@@ -111,56 +111,58 @@ http://egloos.zum.com/geneus/v/3536401 \\
 6장 matplotlib를 이용한 데이터 시각화
 - 16-6-2 PyQt와 matplotlib연동 그래프그리기 참조함.
 - 위 예제를 분석하면 matplotlib사용법 qt gui사용법을 알 수 있다.
-- 그러나 위 예제를 좀 수정해야 잘 사용할 수 있다.
+- 그러나 위 예제를 좀 수정해야 잘 사용할 수 있다.\\
 ~~~ python
-# main function 실행시 필요
-import sys
 
-# widget을 만들때 필요.
-from PyQt5.QtWidgets import *
-from PyQt5.QtGui import *
+  # main function 실행시 필요
+  import sys
 
-# plot하려면 필요
-import matplotlib.pyplot as plt
-# pyqt와 matlib 연결해서 그리려면 필요
-# PyQt내에서 사용하기위해서 FigureCanvasQTAgg 클래스를 import함.
-from matplotlib.backends.backend_qt5agg import FigureCanvasQTAgg as FigureCanvas
+  # widget을 만들때 필요.
+  from PyQt5.QtWidgets import *
+  from PyQt5.QtGui import *
 
-# 주가 분석 시 필요.
-import pandas_datareader.data as web
-import fix_yahoo_finance as yf
-yf.pdr_override()
+  # plot하려면 필요
+  import matplotlib.pyplot as plt
+  # pyqt와 matlib 연결해서 그리려면 필요
+  # PyQt내에서 사용하기위해서 FigureCanvasQTAgg 클래스를 import함.
+  from matplotlib.backends.backend_qt5agg import FigureCanvasQTAgg as FigureCanvas
 
-# FigureCanvas 객체 생성
-self.fig = plt.Figure()
-self.canvas = FigureCanvas(self.fig)
+  # 주가 분석 시 필요.
+  import pandas_datareader.data as web
+  import fix_yahoo_finance as yf
+  yf.pdr_override()
 
-# 레이아웃과 fig연결.
-leftLayout = QVBoxLayout()
-leftLayout.addWidget(self.canvas)
+  # FigureCanvas 객체 생성
+  self.fig = plt.Figure()
+  self.canvas = FigureCanvas(self.fig)
 
-layout = QHBoxLayout()
-layout.addLayout(leftLayout)
-layout.setStretchFactor(leftLayout, 1) # 1은 normalized on 0은 off임.
+  # 레이아웃과 fig연결.
+  leftLayout = QVBoxLayout()
+  leftLayout.addWidget(self.canvas)
 
-code = self.lineEdit.text()
-start_date = '1996-05-06'
-df = web.get_data_yahoo(code, start_date)
-# 위처럼 쓰면 데이터를 가져올 수 있다.
-df['MA20'] = df['Adj Close'].rolling(window=20).mean()
-df['MA60'] = df['Adj Close'].rolling(window=60).mean()
+  layout = QHBoxLayout()
+  layout.addLayout(leftLayout)
+  layout.setStretchFactor(leftLayout, 1) # 1은 normalized on 0은 off임.
+
+  code = self.lineEdit.text()
+  start_date = '1996-05-06'
+  df = web.get_data_yahoo(code, start_date)
+  # 위처럼 쓰면 데이터를 가져올 수 있다.
+  df['MA20'] = df['Adj Close'].rolling(window=20).mean()
+  df['MA60'] = df['Adj Close'].rolling(window=60).mean()
 
 
-self.fig.clear()
-ax = self.fig.add_subplot(111)
-ax.plot(df.index, df['Adj Close'].get_values(), label='Close')
-ax.plot(df.index, df['MA20'].get_values(), label='MA20')
-ax.plot(df.index, df['MA60'].get_values(), label='MA60')
-ax.legend(loc='upper right')
-ax.grid(True)
+  self.fig.clear()
+  ax = self.fig.add_subplot(111)
+  ax.plot(df.index, df['Adj Close'].get_values(), label='Close')
+  ax.plot(df.index, df['MA20'].get_values(), label='MA20')
+  ax.plot(df.index, df['MA60'].get_values(), label='MA60')
+  ax.legend(loc='upper right')
+  ax.grid(True)
 
-self.canvas.draw()
+  self.canvas.draw()
 ~~~
+
 - 사실 위에 있는 있는 구문을 이해하면 일단 이해는 성공했다고 할 수 있다.
 
 
@@ -171,7 +173,7 @@ self.canvas.draw()
 7장-2 : UI 파일을 파이썬 코드에서 로드하기
 - 기본 : ui를 만든후
 - pyuic -x ui이름.ui -o python파일이름(출력이름).py 로 변환 시켜야한다.
-- 사실 이부분이 제일 귀찮았는데 여기 사용방법이 나와 있다.
+- 사실 이부분이 제일 귀찮았는데 여기 사용방법이 나와 있다.\\
 ~~~ python
   import sys
   from PyQt5.QtWidgets import *
@@ -204,27 +206,26 @@ self.canvas.draw()
 - 사실 주가 데이터 저장에는 관심이 없지만 sql에는 관심이 많다. 그러므로 이 장도 공부를 한다.
 - Database Management System에는 여러가지 프로그램이 있습니다.
 - 우선 SQLite를 배우고 Oracle, PostgreSQL and MySQL을 익히면 될것 같습니다.
-- 글을 읽어보내 내용은 어렵지 않다.
+- 글을 읽어보내 내용은 어렵지 않다.\\
 ~~~ python
-import sqlite3
+  import sqlite3
 
-print(sqlite3.version)
+  print(sqlite3.version)
 
-print(sqlite3.sqlite_version)
+  print(sqlite3.sqlite_version)
 
-con = sqlite3.connect("/Users/youngjookim/PycharmProjects/Hello_PyQt/kospi.db")
+  con = sqlite3.connect("/Users/youngjookim/PycharmProjects/Hello_PyQt/kospi.db")
 
-cursor = con.cursor()
+  cursor = con.cursor()
 
-cursor.execute("CREATE TABLE kakao(Date text, Open int, High int, Low int, Closing int, Volumn int)")
+  cursor.execute("CREATE TABLE kakao(Date text, Open int, High int, Low int, Closing int, Volumn int)")
 
-cursor.execute("INSERT INTO kakao VALUES('16.06.03', 97000, 98600, 96900, 98000, 321405)")
+  cursor.execute("INSERT INTO kakao VALUES('16.06.03', 97000, 98600, 96900, 98000, 321405)")
 
-# 여기서 맹점은 INSERT INTO 나 CREATE TABLE 같은것은 내부 명령어이기 때문에 python에서는 인식을 하지 못한다.
+  # 여기서 맹점은 INSERT INTO 나 CREATE TABLE 같은것은 내부 명령어이기 때문에 python에서는 인식을 하지 못한다.
 
-con.commit()
-con.close()
+  con.commit()
+  con.close()
 ~~~
 - 그리고 난 mac을 사용하므로 mac용 DB Brower for SQLite를 받아야한다.
-- [링크](https://www.macupdate.com/app/mac/38584/db-browser-for-sqlite#)
-- 
+- [db-browser-for-sqlite 다운로드 링크](https://www.macupdate.com/app/mac/38584/db-browser-for-sqlite#)
