Update crawling for stock(1)

--- a/_posts/Diary/2018-05-19-Diary08.md
+++ b/_posts/Diary/2018-05-19-Diary08.md
@@ -1,7 +1,7 @@
 ---
 
 layout: post
-title: "what is the limit of my wil?"
+title: "where is the limit of my wil?"
 categories: diary
 tags: [documentation,diary]
 image:
@@ -12,7 +12,7 @@ image:
 
 ---
 
-#### Time : 2018-05-08
+#### Time : 2018-05-19
 #### Feeling : very good!
 #### Title : "오늘은 날씨 좋은 날~~"
 
@@ -23,3 +23,11 @@ image:
 내가 나의 꿈을 이룰 수 있을까?...솔직히 공부하면 할수록 세상은 넓고 할일은 많으나 똑똑한 사람들도 많다.\\
 즉 꼭 내가 아니어도 된다는 것임....\\
 암튼 오늘은 즐겁고 행복한 날이다.\\
+
+#### Time : 2018-05-24
+#### Feeling : not bad!
+#### Title : "my team became 2nd place after 10 years"
+즐거운 날이지만 음.......\\
+암튼 많은 것을 느낀다. 사람은 큰물에서 놀아야한다. 그러나 너무 큰물에서 놀다가는 아무것도 못한다.\\
+그러나 다시 돌아와서 재기할 수 는 있다.\\
+와이프가 기분이 좋아서 나도 좋다.\\
