--- a/_posts/Archives/2018-05-13-Blog05_Pycharm01.md
+++ b/_posts/Archives/2018-05-13-Blog05_Pycharm01.md
@@ -229,3 +229,47 @@ http://egloos.zum.com/geneus/v/3536401 \\
 ~~~
 - 그리고 난 mac을 사용하므로 mac용 DB Brower for SQLite를 받아야한다.
 - [db-browser-for-sqlite 다운로드 링크](https://www.macupdate.com/app/mac/38584/db-browser-for-sqlite#)
+
+9장 Pandas와 sqlite
+- 위에서 sqlite를 사용하는 방법을 배웠다. 그러나 DataFrame과 연동하는 방법은 배우지 않았다.그래서
+- 17장 주가 데이터 저장하기 - 2) Pandas와 SQLite를 참조해서 적는다.
+- 이 글을 적으면 내가 원했던 부분은 1차적으로 끝나게된다. 그러나 이제 맛보기 끝이고 시작이라 생각된다.
+~~~ python
+
+  import pandas as pd
+  import pandas_datareader.data as web
+  import datetime
+  import fix_yahoo_finance as yf
+  import sqlite3
+  yf.pdr_override()
+
+  # 읽어 오기
+  start = datetime.datetime(2010,1,1)
+  end = datetime.datetime(2016,6,12)
+  df = web.get_data_yahoo("078930.KS",start,end)
+
+  print(df.head())
+
+  # DB저장 하기.
+  con = sqlite3.connect('kospi.db')
+  df.to_sql('078930', con, if_exists='replace', chunksize=1000)
+
+  # DB 읽어오기.
+  # index_col='Date'을 해줘야 index가 date로 설정된다.
+  df_read = pd.read_sql("SELECT * FROM '078930'", con, index_col='Date')
+
+  print(df_read.head())
+
+  con.commit()
+  con.close()
+~~~
+- 17장 -1)을 보면 값을 읽어올때
+- cursor = con.cursor()
+- cursor.fetchone()
+- cursor.fetchall()
+- 위 함수를 이용해서 읽을 수도 있겠지만 불편하다. 그러므로 생략.
+
+-----끝--------
+- 일 주일 정도 걸렸으니 생각보다 오래 걸렸다.
+- 아직 내가 생각하는 것을 배우려면 가야할 길이 멀지만 좋은 사이트였던것 같다. 내가 궁금했던 부분이 일부 해소 되었다.
+- '파이썬으로 배우는 알고리즘 트레이딩'저자님 감사합니다.^^ 
