--- a/_posts/Archives/2018-05-13-Blog05_Pycharm01.md
+++ b/_posts/Archives/2018-05-13-Blog05_Pycharm01.md
@@ -27,6 +27,8 @@ http://egloos.zum.com/geneus/v/3536401 \\
 그러나 vi는 배워야함을 많이 느낀다. 간단하게 작성하거나 할때 필요하니까~~\\
 우리가 워드가 있지만 메모장을 윈도우에서 사용하는것 처럼. 리눅스계열에서는 vi는 필요한것 같다.
 
+화살표위+command+delete
+
 1장 환경 구축
 - 몇 가지 해줘야하는 부분이 있다. 분명 초보자는 잘 안될것이다. 내가 그랬으니까 community 버전을 사용한다면
 - run 단축키 : 윈도는 ctrl+F9 이지만 맥은 ctrl+r 임.
@@ -272,4 +274,4 @@ http://egloos.zum.com/geneus/v/3536401 \\
 -----끝--------
 - 일 주일 정도 걸렸으니 생각보다 오래 걸렸다.
 - 아직 내가 생각하는 것을 배우려면 가야할 길이 멀지만 좋은 사이트였던것 같다. 내가 궁금했던 부분이 일부 해소 되었다.
-- '파이썬으로 배우는 알고리즘 트레이딩'저자님 감사합니다.^^ 
+- '파이썬으로 배우는 알고리즘 트레이딩'저자님 감사합니다.^^
