--- a/_posts/Archives/2018-05-20-Blog07_Pycharm02.md
+++ b/_posts/Archives/2018-05-20-Blog07_Pycharm02.md
@@ -19,6 +19,7 @@ image:
 - 난 계정이 없기 때문에 똑같이 따라하기는 힘들것 같다.
 - 우선 실전프로그램을 보면서 따라할수 있는것은하고 필요없는 부분은 패스 한다.(https://wikidocs.net/2878)
 ^화살표위 = shift+ctrl
+esc
 
 1. 창에서 또다른 창 띄우는것은?
 - [PyQt : Open Other Window When Button Clicked](https://www.youtube.com/watch?v=dRRpbDFnMHI&t=354s)
@@ -83,7 +84,7 @@ image:
 - 2장 웹페이지 크롤링 ~ 6장 배당률 기반 투자 알고리즘 구현을 차례대로 구현해보고 정리해서 적어보자.
 - 언어도 말을해야 자기것이 되듯이 코드도 직접짜고 정리해봐야 내것이 된다.
 
-- 2장 step1
+2장 step1
 
 ~~~ python
   import pandas as pd
@@ -148,7 +149,7 @@ image:
 - DataFrame을 다시 생성했다. 이유는 read_html이 예제처럼 동작하지 않아서 index값을 가져오지 못했다.
 - 이것때문에 고생을 좀 많이 했다.
 
-- 3장/4장 배당률 기반 투자 알고리즘
+3장/4장 배당률 기반 투자 알고리즘
 
 - 이번 절에서는 앞서 파싱한 재무제표 데이터를 바탕으로 국채시가배당률이 높은 종목을 선정하는 프로그램을 구현하겠습니다.
 - 아직 4장까지만 봤는데 5장6장을 봐야 전체를 이해할 수 있을듯 싶다.
@@ -282,6 +283,339 @@ image:
 - 우선 단위기능은 잘 돌아가는것을 확인하였다. 그러나 아직까지는 감이 안잡힘.
 - 하나하나 기능을 보면 어렵지 않음. 그러나 조합이 중요하지....
 
-- 5장 배당률 기반 투자 알고리즘 구현(2)
+5장 배당률 기반 투자 알고리즘 구현(2)
+- 국채시가배당률 알고리즘 기반으로 종목 매수여부 결정하는 알고리즘 구현
 
-- 6장 배당률 기반 투자 알고리즘 구현(3)
+~~~ python
+  import sys
+
+  import datetime
+  import webreader
+  import numpy as np
+  from PyQt5.QtWidgets import *
+
+  # code = '058470'
+  #
+  # #예상 현금배당수익률
+  # print(webreader.get_estimated_dividend_yield(code))
+  #
+  # #현금 배당수익률 = 주당 배당금/ 주가 *100
+  # print(webreader.get_dividend_yield(code))
+  #
+  # #3년 만기 국채수익률
+  # print(webreader.get_current_3year_treasury())
+  class PyMon:
+      # def __init__(self):
+
+      def calculate_estimated_dividend_to_treasury(self, code):
+          estimated_dividend_yield = webreader.get_estimated_dividend_yield(code)
+          if np.isnan(estimated_dividend_yield):
+              estimated_dividend_yield = webreader.get_dividend_yield(code)
+
+          #국채시가 배당률 = 현금배당수익률/ 3년 만기 국채 수익률
+          current_3year_treasury = webreader.get_current_3year_treasury()
+          estimated_dividend_to_treasury = float(estimated_dividend_yield)/float(current_3year_treasury)
+
+          return estimated_dividend_to_treasury
+
+      def get_min_max_dividend_to_treasury(self,code):
+          previous_dividend_yield = webreader.get_previous_dividend_yield(code)
+          three_years_treasury = webreader.get_3year_treasury()
+
+          now = datetime.datetime.now()
+          cur_year = now.year
+          previous_dividend_to_treasury = {}
+
+          for year in range(cur_year-5, cur_year):
+              if year in previous_dividend_yield.keys() and year in three_years_treasury.keys():
+                  ratio = float(previous_dividend_yield[year])/float(three_years_treasury[year])
+                  previous_dividend_to_treasury[year] = ratio
+
+          print(previous_dividend_to_treasury)
+          min_ratio = min(previous_dividend_to_treasury.values())
+          max_ratio = max(previous_dividend_to_treasury.values())
+
+          return (min_ratio, max_ratio)
+
+      def buy_check_by_dividend_algorithm(self,code):
+          estimated_dividend_to_treasury = self.calculate_estimated_dividend_to_treasury(code)
+
+          (min_ratio, max_ratio) = self.get_min_max_dividend_to_treasury(code)
+
+          if estimated_dividend_to_treasury >= max_ratio:
+              return(1, estimated_dividend_to_treasury)
+          else:
+              return(0, estimated_dividend_to_treasury)
+
+  if __name__ == "__main__":
+      app = QApplication(sys.argv)
+      pymon = PyMon()
+      #pymon.run()
+      print(pymon.calculate_estimated_dividend_to_treasury('058470'))
+      print(pymon.get_min_max_dividend_to_treasury('058470'))
+      print(pymon.buy_check_by_dividend_algorithm('058470'))
+~~~
+
+
+6장 배당률 기반 투자 알고리즘 구현(3)
+- 난 키움을 사용하지 않으므로 약간의 수정을 가해야 예제를 할 수 있었다.
+- 그러나 예제가 제대로 동작하지 않아서 고생을 좀 했다.
+- 예제를 하다보면 튜플,딕셔너리,리스트 헷갈리는데 [링크](https://hashcode.co.kr/questions/4118/의-차이와-사용해야-할-곳)
+- 링크 참조하자.
+
+~~~ python
+  def get_kospi200():
+
+      BaseUrl = 'http://finance.naver.com/sise/entryJongmok.nhn?&page='
+
+      kospi_code = []
+      kospi_name = []
+      for i in range(1,22,1):
+          url = BaseUrl + str(i)
+          r = requests.get(url)
+          soup = BeautifulSoup(r.text,'lxml')
+          items = soup.find_all('td',{'class':'ctg'})
+
+          for item in items:
+              # print(item)
+              # print(item.a)
+              txt = item.a.get('href')
+              # print(txt)
+              k = re.search('[\d]+', txt)
+              # print(re.search('[\d]', txt))
+              # print(re.search('[\d]+', txt))
+              if k:
+                  code = k.group()
+                  name = item.text
+                  kospi_code.append(code)
+                  kospi_name.append(name)
+
+
+      kospi200 = Series(kospi_code, index=kospi_name)
+
+      return kospi200
+~~~
+
+~~~ python
+  import sys
+
+  import datetime
+  import webreader
+  import numpy as np
+  from PyQt5.QtWidgets import *
+  import extract_kospi200
+  import time
+
+  # #예상 현금배당수익률
+  # print(webreader.get_estimated_dividend_yield(code))
+  #
+  # #현금 배당수익률
+  # print(webreader.get_dividend_yield(code))
+  #
+  # #3년 만기 국채수익률
+  # print(webreader.get_current_3year_treasury())
+  class PyMon:
+      # def __init__(self):
+
+      def calculate_estimated_dividend_to_treasury(self, code):
+          estimated_dividend_yield = webreader.get_estimated_dividend_yield(code)
+          if np.isnan(estimated_dividend_yield):
+              estimated_dividend_yield = webreader.get_dividend_yield(code)
+
+              if estimated_dividend_yield == "":
+                  estimated_dividend_yield = 0
+
+          #국채시가 배당률 = 현금배당수익률/ 3년 만기 국채 수익률
+          current_3year_treasury = webreader.get_current_3year_treasury()
+          estimated_dividend_to_treasury = float(estimated_dividend_yield)/float(current_3year_treasury)
+
+          return estimated_dividend_to_treasury
+
+      def get_min_max_dividend_to_treasury(self,code):
+          previous_dividend_yield = webreader.get_previous_dividend_yield(code)
+          three_years_treasury = webreader.get_3year_treasury()
+
+          now = datetime.datetime.now()
+          cur_year = now.year
+          previous_dividend_to_treasury = {}
+
+          for year in range(cur_year-5, cur_year):
+              if year in previous_dividend_yield.keys() and year in three_years_treasury.keys():
+                  ratio = float(previous_dividend_yield[year])/float(three_years_treasury[year])
+                  previous_dividend_to_treasury[year] = ratio
+
+          # print(previous_dividend_to_treasury)
+          if previous_dividend_to_treasury == {}:
+              min_ratio = 0
+              max_ratio = 0
+          else:
+              min_ratio = min(previous_dividend_to_treasury.values())
+              max_ratio = max(previous_dividend_to_treasury.values())
+
+          return (min_ratio, max_ratio)
+
+      def buy_check_by_dividend_algorithm(self,code):
+          estimated_dividend_to_treasury = self.calculate_estimated_dividend_to_treasury(code)
+
+          (min_ratio, max_ratio) = self.get_min_max_dividend_to_treasury(code)
+
+          if estimated_dividend_to_treasury >= max_ratio and max_ratio != 0:
+              return(1, estimated_dividend_to_treasury)
+          else:
+              return(0, estimated_dividend_to_treasury)
+
+      def run_dividend(self):
+          buy_list = []
+          kospi_codes = extract_kospi200.get_kospi200()
+          i = 0
+          for code in kospi_codes:
+              time.sleep(0.1)
+              print('check: ', kospi_codes.index[i])
+
+              ret = self.buy_check_by_dividend_algorithm(code)
+
+              if ret[0] == 1:
+                  print("Pass",ret)
+                  buy_list.append((kospi_codes.index[i], code, ret[1]))
+              else:
+                  print("Fail",ret)
+                  # buy_list.append((kospi_codes.index[i], ret[1]))
+
+              i = i + 1
+          # print(kospi_codes.index)
+          # print(kospi_codes.values)
+
+          sorted_list = sorted(buy_list, key=lambda t : t[2], reverse=True)
+          for i in range(1, 21, 1):
+              print(sorted_list[i])
+
+          self.update_buy_list(buy_list)
+
+      def update_buy_list(self, buy_list):
+          f = open("buy_list.txt", "wt")
+          for code in buy_list:
+              f.writelines("회사명;%s; 코드;%r;국채시가 배당률;%r \n" % (code[0], code[1], code[2]))
+          f.close()
+
+  if __name__ == "__main__":
+      app = QApplication(sys.argv)
+      pymon = PyMon()
+      pymon.run_dividend()
+~~~
+
+~~~ python
+  # 결과 2018/05/26 기준
+  회사명;삼성전자; 코드;'005930';국채시가 배당률;1.2318181818181817
+  회사명;삼성생명; 코드;'032830';국채시가 배당률;1.0181818181818183
+  회사명;롯데케미칼; 코드;'011170';국채시가 배당률;1.5545454545454545
+  회사명;삼성화재; 코드;'000810';국채시가 배당률;1.9045454545454545
+  회사명;고려아연; 코드;'010130';국채시가 배당률;1.1272727272727272
+  회사명;KT; 코드;'030200';국채시가 배당률;1.8136363636363635
+  회사명;롯데쇼핑; 코드;'023530';국채시가 배당률;1.0
+  회사명;한온시스템; 코드;'018880';국채시가 배당률;1.4863636363636363
+  회사명;한국가스공사; 코드;'036460';국채시가 배당률;1.0363636363636362
+  회사명;DB손해보험; 코드;'005830';국채시가 배당률;1.75
+~~~
+
+- [배당률기반 투자 알고리즘 구현](https://wikidocs.net/6665)
+- 예제 학습이 끝났다 키움을 사용하지 않아서 약간 수정해서 비슷하게 구현했다.
+- pycharm을 통해서 python, pyqt공부하려고 했는데 여기까지 왔다.
+- 아직 초보자라 잘모르지만 재미있는 학습이었다.
+
+7장 [급등주 포착 알고리즘](https://wikidocs.net/6657)
+- 약간의 수정을 통해서 비슷하게 구현할 수 있을 것같다.
+- 내가 코스피 200에 해당하는것만 가지고 있으므로 이 정보를 이용해서 급등주 검색 알고리즘을 구현해봤다.
+
+~~~ python
+  import pandas_datareader.data as web
+  import fix_yahoo_finance as yf
+  from PyQt5.QtWidgets import *
+  import sys
+  import extract_kospi200
+  yf.pdr_override()
+  import time
+
+  class PyMon:
+      def get_ohlcv(self, code, start):
+          df = web.get_data_yahoo(code, start)
+          time.sleep(0.2)
+          return df
+
+      def check_speedy_rising_volume(self, code ):
+          result = False
+          # start_date = '1996-05-06'
+          start_date = '2018-01-01'
+          window_span = 20
+
+          df = self.get_ohlcv(code, start_date)
+          volumes = df['Volume']
+          adj_close = df['Adj Close']
+
+          if len(volumes) < window_span+1:
+              result = False
+          else:
+              sum_vol = 0
+              today_vol = 0
+              today_cost = 0
+              sum_cost = 0
+
+              for i in range(volumes.count()-1-window_span, volumes.count()):
+                  vol = volumes[i]
+                  cost = adj_close[i]
+                  if i == volumes.count()-1:
+                      today_vol = vol
+                      today_cost = cost
+                  elif volumes.count()-1-window_span <= i < volumes.count()-1:
+                      sum_vol += vol
+                      sum_cost += cost
+                  else:
+                      break
+
+              avg_vol = sum_vol / window_span
+              avg_cost = sum_cost / window_span
+              print(avg_vol * 2 - today_vol)
+              if today_vol > avg_vol * 2 and today_cost > avg_cost:
+                  result = True
+
+          return (result, today_vol, avg_vol, today_cost, avg_cost)
+
+      def run(self):
+           buy_list = []
+           kospi_codes = extract_kospi200.get_kospi200()
+           num = kospi_codes.count()
+           #print(num)
+           # for code in kospi_codes:
+           i = 0
+           for code in kospi_codes:
+              code_ks = code + '.KS'
+              print(code_ks)
+              print(i, '/', num)
+              en_add = self.check_speedy_rising_volume(code_ks)
+              if en_add[0]:
+                  buy_list.append((kospi_codes.index[i], code_ks , en_add[1], en_add[2], en_add[3], en_add[4]))
+
+              i = i + 1
+
+           self.update_buy_list(buy_list)
+
+      def update_buy_list(self, buy_list):
+          f = open("buy_list_add.txt", "wt")
+          sorted_list = sorted(buy_list, key=lambda t: t[2]/t[3], reverse=True)
+          for code in sorted_list:
+              f.writelines("회사명;%s; 코드;%r;오늘거래량;%r 20일평균 거래량;%r 비율;%r 오늘종가;%r 20일평균 종가;%r\n" % (code[0], code[1], code[2], code[3], code[2]/code[3], code[4], code[5]))
+          f.close()
+
+  if __name__ == "__main__":
+      app = QApplication(sys.argv)
+      pymon = PyMon()
+      pymon.run()
+
+      # 출력
+      회사명;LIG넥스원; 코드;'079550.KS';오늘거래량;577031 20일평균 거래량;213216.7 비율;2.7063124042347524 오늘종가;45350.0 20일평균 종가;42295.0
+      회사명;LG이노텍; 코드;'011070.KS';오늘거래량;624640 20일평균 거래량;260582.05 비율;2.3970952719114766 오늘종가;137000.0 20일평균 종가;126050.0
+      회사명;한화에어로스페이스; 코드;'012450.KS';오늘거래량;1590239 20일평균 거래량;728645.55 비율;2.1824589472892546 오늘종가;28600.0 20일평균 종가;27157.5
+      회사명;한올바이오파마; 코드;'009420.KS';오늘거래량;1210915 20일평균 거래량;580201.5 비율;2.087059409532723 오늘종가;30750.0 20일평균 종가;29530.0
+~~~
+
+- 이번 강좌를 통해서 pycharm, python, pyqt and crawling에대해서 익숙해지는 계기가 된것 같다.
+- 앞으로 가야할 길이 멀지 눈을 떴으므로 뭘 볼지를 결정하자!!
