--- a/_posts/Diary/2018-05-19-Diary08.md
+++ b/_posts/Diary/2018-05-19-Diary08.md
@@ -22,7 +22,7 @@ image:
 그리고 다녀와서 이렇게 다시 공부도 하고 생각에 잠긴다..나의 한계는?....\\
 내가 나의 꿈을 이룰 수 있을까?...솔직히 공부하면 할수록 세상은 넓고 할일은 많으나 똑똑한 사람들도 많다.\\
 즉 꼭 내가 아니어도 된다는 것임....\\
-암튼 오늘은 즐겁고 행복한 날이다.\\
+암튼 오늘은 즐겁고 행복한 날이다.
 
 #### Time : 2018-05-24
 #### Feeling : not bad!
@@ -30,4 +30,12 @@ image:
 즐거운 날이지만 음.......\\
 암튼 많은 것을 느낀다. 사람은 큰물에서 놀아야한다. 그러나 너무 큰물에서 놀다가는 아무것도 못한다.\\
 그러나 다시 돌아와서 재기할 수 는 있다.\\
-와이프가 기분이 좋아서 나도 좋다.\\
+와이프가 기분이 좋아서 나도 좋다.
+
+#### Time : 2018-05-28
+#### Feeling : good!
+#### Title : "slow and steady win the race"
+오늘은 여행을 다녀오고 즐거운 날이다.\\
+slow and steady win the race 이 말을 좋아하지만 과연 그럴까?\\
+항상 나에게 의문이 드는 말이다. 난 항상 긍정적으로 살아오고있지만 의문이 드는것은사실이다.\\
+난 아직 배고프기 때문에....
