--- a/_posts/Diary/2018-05-19-Diary08.md
+++ b/_posts/Diary/2018-05-19-Diary08.md
@@ -39,3 +39,11 @@ image:
 slow and steady win the race 이 말을 좋아하지만 과연 그럴까?\\
 항상 나에게 의문이 드는 말이다. 난 항상 긍정적으로 살아오고있지만 의문이 드는것은사실이다.\\
 난 아직 배고프기 때문에....
+
+#### Time : 2018-05-30
+#### Feeling : good!
+#### Title : "slow and steady win the race"
+글을 읽었다. 하버드가 40년간 추적한 성공한 사람들의 특징\\
+[링크](https://www.clien.net/service/board/park/12160657)
+이 글을 읽고 Grit지수. 댓글을 보면 더 생각을 많이하게된다.\\
+하버드 갈정도면 어차피 재능은 있는거다..뭐 맞는말 같다. ㅜㅜ....\\
