--- a/_posts/Archives/2018-05-20-Blog07_Pycharm02.md
+++ b/_posts/Archives/2018-05-20-Blog07_Pycharm02.md
@@ -525,6 +525,8 @@ esc
 7장 [급등주 포착 알고리즘](https://wikidocs.net/6657)
 - 약간의 수정을 통해서 비슷하게 구현할 수 있을 것같다.
 - 내가 코스피 200에 해당하는것만 가지고 있으므로 이 정보를 이용해서 급등주 검색 알고리즘을 구현해봤다.
+- 위에서 구한 국채시가 배당률을 이용하고 급등주 포착 알고리즘을 이용해서 만들어 봤다.
+- 목표 : 우선 급등주를 고른 후 국채시가 배당률이 높은 순으로 정렬한다.
 
 ~~~ python
   import pandas_datareader.data as web
@@ -534,6 +536,9 @@ esc
   import extract_kospi200
   yf.pdr_override()
   import time
+  import pymon_sub
+
+
 
   class PyMon:
       def get_ohlcv(self, code, start):
@@ -590,9 +595,13 @@ esc
               code_ks = code + '.KS'
               print(code_ks)
               print(i, '/', num)
+              # 국채시가 배당률 = 현금배당수익률/ 3년 만기 국채 수익률
+              # 5년간 국채 시가 배당률 중 높은 거보다 더 좋은 경우만 true
+              ret = pymon_sub.buy_check_by_dividend_algorithm(code)
+              # 급중주 : 기준 현 주가가 20일 평균 주가보다 높고 거래량은 20일 평균 거래량의 2배보다 클때
               en_add = self.check_speedy_rising_volume(code_ks)
               if en_add[0]:
-                  buy_list.append((kospi_codes.index[i], code_ks , en_add[1], en_add[2], en_add[3], en_add[4]))
+                  buy_list.append((kospi_codes.index[i], code_ks , en_add[1], en_add[2], en_add[3], en_add[4], ret[1]))
 
               i = i + 1
 
@@ -600,9 +609,9 @@ esc
 
       def update_buy_list(self, buy_list):
           f = open("buy_list_add.txt", "wt")
-          sorted_list = sorted(buy_list, key=lambda t: t[2]/t[3], reverse=True)
+          sorted_list = sorted(buy_list, key=lambda t: t[6], reverse=True)
           for code in sorted_list:
-              f.writelines("회사명;%s; 코드;%r;오늘거래량;%r 20일평균 거래량;%r 비율;%r 오늘종가;%r 20일평균 종가;%r\n" % (code[0], code[1], code[2], code[3], code[2]/code[3], code[4], code[5]))
+              f.writelines("회사명;%s; 코드;%r;오늘거래량;%r 20일평균 거래량;%r 비율;%r 오늘종가;%r 20일평균 종가;%r 국채시가 배당률;%r\n" % (code[0], code[1], code[2], code[3], code[2]/code[3], code[4], code[5], code[6]))
           f.close()
 
   if __name__ == "__main__":
@@ -611,11 +620,25 @@ esc
       pymon.run()
 
       # 출력
-      회사명;LIG넥스원; 코드;'079550.KS';오늘거래량;577031 20일평균 거래량;213216.7 비율;2.7063124042347524 오늘종가;45350.0 20일평균 종가;42295.0
-      회사명;LG이노텍; 코드;'011070.KS';오늘거래량;624640 20일평균 거래량;260582.05 비율;2.3970952719114766 오늘종가;137000.0 20일평균 종가;126050.0
-      회사명;한화에어로스페이스; 코드;'012450.KS';오늘거래량;1590239 20일평균 거래량;728645.55 비율;2.1824589472892546 오늘종가;28600.0 20일평균 종가;27157.5
-      회사명;한올바이오파마; 코드;'009420.KS';오늘거래량;1210915 20일평균 거래량;580201.5 비율;2.087059409532723 오늘종가;30750.0 20일평균 종가;29530.0
+      회사명;쌍용양회; 코드;'003410.KS';오늘거래량;2297866 20일평균 거래량;1042480.5 비율;2.204229239779545 오늘종가;38600.0 20일평균 종가;31895.0 국채시가 배당률;2.1628959276018103
+      회사명;효성; 코드;'004800.KS';오늘거래량;543691 20일평균 거래량;188168.2 비율;2.8893883238506826 오늘종가;138500.0 20일평균 종가;132925.0 국채시가 배당률;1.8642533936651584
+      회사명;동양; 코드;'001520.KS';오늘거래량;3165234 20일평균 거래량;1167315.45 비율;2.711549821430017 오늘종가;2275.0 20일평균 종가;2132.5 국채시가 배당률;1.1402714932126696
+      회사명;현대제철; 코드;'004020.KS';오늘거래량;6637458 20일평균 거래량;1210368.1 비율;5.483834215392821 오늘종가;67200.0 20일평균 종가;61685.0 국채시가 배당률;0.579185520361991
 ~~~
 
 - 이번 강좌를 통해서 pycharm, python, pyqt and crawling에대해서 익숙해지는 계기가 된것 같다.
 - 앞으로 가야할 길이 멀지 눈을 떴으므로 뭘 볼지를 결정하자!!
+- run() --> buy_check_by_dividend_algorithm() : 국채시가 배당률
+- buy_check_by_dividend_algorithm() --> calculate_estimated_dividend_to_treasury() : 현재 국채시가 배당률
+- buy_check_by_dividend_algorithm() --> get_min_max_dividend_to_treasury() : 5년가 국채 시가 배당률
+- calculate_estimated_dividend_to_treasury() --> get_estimated_dividend_yield : 현금 배당 수익률
+- calculate_estimated_dividend_to_treasury() --> get_dividend_yield : 최근 결산 수정 DPS(현금)/전일자 보통주 수정주가로 대체
+- calculate_estimated_dividend_to_treasury() --> get_current_3year_treasury : 3년 만기 국채 수익률
+- get_min_max_dividend_to_treasury() --> get_previous_dividend_yield() : 5년간 현금 배당 수익률
+- get_min_max_dividend_to_treasury() --> get_3year_treasury() : 5년간 3년 만기 국채 수익
+- run() --> check_speedy_rising_volume(): sub함수 없음.
+- 나도 이것을 정리하면서 주식에대해서도 이해를 하고 python에대해서도 정리하고 좋은 강의이다.
+- 강사분께 다시한번 감사드립니다.
+- 강의 명 : 파이썬으로 배우는 알고리즘 트레이딩
+- 지은이 : 조대표 외 1명
+- 참고 주소 : [링크](https://wikidocs.net/6665)
