Update English study

--- a/_posts/BooksnPapers/2018-06-02-Eng3words_01.md
+++ b/_posts/BooksnPapers/2018-06-02-Eng3words_01.md
@@ -53,4 +53,7 @@ image:
   - 올리다와 내리다: increase와 decrease(reduce), raise와 lower
   - 설명하다와 요약하다 : explain, describe, discuss, summarize, outline
   - 짧게 전하는 동사 : outnumber, outweigh, outperform, double, triple
-4장 
+4장
+- 도서관에서 책을 빌린 관계로 반납했다.
+- 전치사 와 그 밖에 내용들이 있엇지만 음....언어는 연습이 답이다....
+- ...끝....
