--- a/_posts/Archives/2018-08-20-Blog10_Filter_01.md
+++ b/_posts/Archives/2018-08-20-Blog10_Filter_01.md
@@ -19,15 +19,17 @@ image:
 - kalman filter는 과거의 데이터를 기반으로 미래를 에측하는 filter이다.
 - 어려운것 같지만 그냥 밑고 쓴다. 그러나 아래 증명을 읽어 보면 알겠지만 몇가지 가정이 들어간다.
 - 그래서 잘 맞지 않는경우가 존재한다. 그러나 많은 분야에서 사용되고 있다.
-- 쉽게 증명을 잘하고 있다.
-- http://www.swarthmore.edu/NatSci/echeeve1/Ref/Kalman/ScalarKalman.html#Examples
+- 아래 링크에서 쉽게 잘 증명을 잘하고 있다.
+- [증명 설명](http://www.swarthmore.edu/NatSci/echeeve1/Ref/Kalman/ScalarKalman.html)
 
 
-- particle filter
-- https://jay.tech.blog/2017/02/28/localization%EC%9C%84%EC%B9%98-%EC%84%A4%EC%A0%95/
-- http://www.irisa.fr/aspi/legland/ref/arulampalam02a.pdf
+particle filter
+- [localization-Histogram Filter](https://jay.tech.blog/2017/02/28/localization%EC%9C%84%EC%B9%98-%EC%84%A4%EC%A0%95/)
+- [A Tutorial on Particle Filters for Online
+Nonlinear/Non-Gaussian Bayesian Tracking](http://www.irisa.fr/aspi/legland/ref/arulampalam02a.pdf)
 - [확률이론](https://jay.tech.blog/2017/02/28/%EC%9C%A0%EC%9A%A9%ED%95%9C-%ED%99%95%EB%A5%A0probability-%EC%9D%B4%EB%A1%A0/)
 - [선형대수](https://blog.naver.com/mykepzzang/220146002923)
-
-
-- https://github.com/ndrplz/self-driving-car/blob/master/project_7_unscented_kalman_filter/src/ukf.cpp
+- [UKF code](https://github.com/ndrplz/self-driving-car/blob/master/project_7_unscented_kalman_filter/src/ukf.cpp)
+- 우연 찮게 돌아다니다가 찾았다. (http://studentdavestutorials.weebly.com/particle-filter-with-matlab-code.html)
+- 괜찮은 사이트이다.
+- 맵을 가지고 있다는 가정하에 확률을 계속 계산하면서 하는것같다. 맵이 없는경우는 어떻게 하지? (https://www.youtube.com/watch?v=aUkBa1zMKv4)
