first commin in 2020
design pattern and how to install essential program to me.

--- a/_posts/Archives/2019-06-09-Blog19_Cuda.md
+++ b/_posts/Archives/2019-06-09-Blog19_Cuda.md
@@ -19,7 +19,7 @@ image:
 
 참조한 사이트 정리.
 
-cuda 기초
+cuda 기초 \\
 -- [CUDA 프로그래밍 모델](http://haanjack.github.io/cuda/2016/03/27/cuda-prog-model.html)
 
 -- [CUDA 예제](https://github.com/dedoogong/cuda)
