update singleton and iterator

--- a/_posts/Diary/2020-02-09-Diary09.md
+++ b/_posts/Diary/2020-02-09-Diary09.md
@@ -1,7 +1,7 @@
 ---
 
 layout: post
-title: "To do list"
+title: "My thoughts in 2020"
 categories: diary
 tags: [documentation,diary]
 image:
@@ -24,3 +24,12 @@ image:
 6. speech to text ???.
 
 내 머리속에 있는 내용??????
+
+
+#### Time : 2020-03-08
+#### Feeling : not good
+#### Title : My thoughts in my head
+
+요즘 C#에 있는 Reflection이라는 기능에 대해서 공부하는데 너무 생소하고 \\
+어떻게 사용해야 효율적인지 잘 모르겠다. \\
+효율을 위해서 생겨난 기능인데....잘 모르겠다 어떻게 사용해야 효율적으로 사용하는것인지. \\
