Add Stock category and update 10/8 stock diary

--- a/_posts/Diary/2017-08-03-Diary03_.md
+++ b/_posts/Diary/2017-08-03-Diary03_.md
@@ -2,8 +2,8 @@
 
 layout: post
 title: "book review of first time machine learning and deep learning"
-categories: diary
-tags: [documentation,diary]
+categories: Diary
+tags: [documentation,Diary]
 image:
  feature:
  teaser:
