--- a/_posts/Diary/2017-11-30-Diary06.md
+++ b/_posts/Diary/2017-11-30-Diary06.md
@@ -2,8 +2,8 @@
 
 layout: post
 title: "what I like,what I want to do,what I do well"
-categories: diary
-tags: [documentation,diary]
+categories: Diary
+tags: [documentation,Diary]
 image:
  feature:
  teaser:
