--- a/_posts/Diary/2017-12-22-Diary07.md
+++ b/_posts/Diary/2017-12-22-Diary07.md
@@ -2,8 +2,8 @@
 
 layout: post
 title: "will..."
-categories: diary
-tags: [documentation,diary]
+categories: Diary
+tags: [documentation,Diary]
 image:
  feature:
  teaser:
