--- a/_posts/Diary/2018-12-31-Diary08.md
+++ b/_posts/Diary/2018-12-31-Diary08.md
@@ -1,9 +1,9 @@
 ---
 
 layout: post
-title: "where is the limit of my wil?"
-categories: diary
-tags: [documentation,diary]
+title: "where is the limit of my will?"
+categories: Diary
+tags: [documentation,Diary]
 image:
  feature:
  teaser:
