--- a/_posts/Diary/2020-12-31-Diary09.md
+++ b/_posts/Diary/2020-12-31-Diary09.md
@@ -2,8 +2,8 @@
 
 layout: post
 title: "My thoughts in 2020"
-categories: diary
-tags: [documentation,diary]
+categories: Diary
+tags: [documentation,Diary]
 image:
  feature:
  teaser:
