--- a/_posts/Diary/2017-01-01-Diary00.md
+++ b/_posts/Diary/2017-01-01-Diary00.md
@@ -2,8 +2,8 @@
 
 layout: post
 title: "Startig Diary Category"
-categories: diary
-tags: [documentation,diary]
+categories: Diary
+tags: [documentation,Diary]
 image:
  feature:
  teaser:
