--- a/_posts/Diary/2017-08-03-Diary04_08M07D.md
+++ b/_posts/Diary/2017-08-03-Diary04_08M07D.md
@@ -2,8 +2,8 @@
 
 layout: post
 title: "familiarity vs unfamiliarity"
-categories: diary
-tags: [documentation,diary]
+categories: Diary
+tags: [documentation,Diary]
 image:
  feature:
  teaser:
