Update posting in October Add Hobby Category

--- a/_posts/Diary/2021-10-07-Diary10.md
+++ b/_posts/Diary/2021-10-07-Diary10.md
@@ -3,10 +3,10 @@
 layout: post
 title: "Getting started again"
 categories: Diary
-tags: [documentation,Diary]
+tags: [Diary]
 image:
- feature:
- teaser:
+ feature: spools.jpg
+ teaser: spools-teaser.jpg
  credit:
  creditlink:
 
@@ -17,4 +17,8 @@ image:
 #### Title : Getting started again!!
 요즘 내자신을 뒤돌아 보면서 내가 어떻게 살아야하는지 고민해보는 글을 여기에 적어 놔야겠다.<br>
 주식을 하면서 일기를 쓰는 습관을 들여야 겠다라는 생각이 많이 든다.<br>
+아무런 생각없이 주식을 시작했고 어쩌다 보니 금액 규모가 내 그릇이상으로 커졌다.<br>
+이제 보수적으로 공부도 하면서 묻지마 투자는 지양해야겠다.<br>
+하루하루 어떻게 살아야하나 고민이 많이 되는 하루이다.<br>
+
 
