Update posts in November Modified README.md

--- a/_posts/Hobby/2021-10-29-Coffee03.md
+++ b/_posts/Hobby/2021-10-29-Coffee03.md
@@ -1,7 +1,7 @@
 ---
 
 layout: post
-title: "하리오 V60 receipe(에티오피아 게샤)"
+title: "하리오 V60 recipe(에티오피아 게샤)"
 categories: Hobby
 tags: [Coffee]
 image:
