--- a/_posts/Hobby/2021-10-30-Coffee04.md
+++ b/_posts/Hobby/2021-10-30-Coffee04.md
@@ -1,7 +1,7 @@
 ---
 
 layout: post
-title: "하리오 V60 receipe(정형용바리스타)"
+title: "하리오 V60 recipe(정형용바리스타)"
 categories: Hobby
 tags: [Coffee]
 image:
@@ -34,3 +34,6 @@ image:
 3차 60g - 8초동안 1분 5 0초<br>
 이정도 했을때 2분 30초 안에 끝날것 같다.<br>
 내일 이방식으로 한번 해봐야겠다.<br>
+
+다시 보니 정말 좋은 동영상인것 같다. 여러번 봐야겠다.<br>
+전반적으로 원두를 샀을때 내가 어떤생각을 가지고 recipe를 설계해야하는지 잘 알려주고 있다.<br>
