--- a/_posts/Stock/2021-10-29-Stock07.md
+++ b/_posts/Stock/2021-10-29-Stock07.md
@@ -75,12 +75,45 @@ https://www.youtube.com/watch?v=JqCXIdqxPtQ
 그러나 아직 끌리지는 않는다. 암튼 참 좋은 영상이었던것 같다.<br>
 
 한번 비트코인 빼고 계산 해봤다.<br>
-계산 식에 오차가 존재하므로 나중에 보면 알것 이다.
+계산 식에 오차가 존재하므로 나중에 보면 알것 이다.<br>
 2020
 
-| March 31, |	June 30, |	September 30, |	December 31 |
+| March 31(M) |	June 30(M) |	September 30(M) |	December 31(M) |
 | :------------- | :------------- | :----------: | :------------- |
-| Total net revenue | 1,381,109 | 1,923,625	| 3,033,874 | 3,066,755 |
-| Bitcoin costs | 299,426 |	858,041 | 1,601,615	| 1,812,461 |
+| Total net revenue | 1.38 | 1.92	| 3.03 | 3.06 |
+| Bitcoin costs | 0.299 |	0.858 | 1.601	| 1.812 |
 | rate |	0.21 |	0.44 |	0.52 |	0.59 |
-| Net revenue	|	1,081,683 |	1,065,584 |	1,432,259 |	1,254,294 |
+| Net revenue	|	1.081 |	1.065 |	1.432 |	1.254 |
+
+밑에 계산식을 보면 지금 주식이 적정 가격인것은 알 수 있다.<br>
+어떻게 보면 고평가이지만 어떻게 보면 보수적으로 적정가격인것 같다.<br>
+즉 매수해도 나쁘지 않은 가격 같다.<br>
+당연히 200대 초반이면 더 좋겠지만....<br>
+1분기와 2분기를 보면 비트코인을 제외하고도 성장성이 거의 50%를 넘는다.<br>
+위드코로나 시대로가면 성장성은 더 클것이다.<br>
+
+예측 치 | 예측치 1 | 예측치 2
+1Q(5월) | 1.62 | 1.62
+2Q(8월) | 2.01 | 2.01
+3Q(10~11월) | 2.8(예측) | 3(예측)
+4Q(2월) | 2.8(예측) | 3(예측)
+총매출(예측) | 9.23 | 9.63
+예상RPS | 19.99 | 20.86
+예상PSR | 12 | 12
+예상주가 | 239.90 | 250.30
+주식 수(M) | 461.795 | 461.795
+
+더 보수적으로 계산해서 PSR을 11로 수정하면 예상 가격은 219.91이다. 참고하자.<br>
+
+
+
+
+
+
+
+
+
+
+
+
+
