--- a/_posts/Stock/2021-10-07-Stock00.md
+++ b/_posts/Stock/2021-10-07-Stock00.md
@@ -3,7 +3,7 @@
 layout: post
 title: "Getting Started Stock category"
 categories: Stock
-tags: [documentation,Stock]
+tags: [Stock]
 image:
  feature:
  teaser:
