--- a/_posts/Archives/2022-8-25-Blog36_react-01.md
+++ b/_posts/Archives/2022-8-25-Blog36_react-01.md
@@ -1,7 +1,7 @@
 ---
 
 layout: post
-title: "Get started react "
+title: "Get started react"
 categories: Archives
 tags: [documentation,react]
 image:
@@ -9,7 +9,7 @@ image:
  teaser:
  credit:
  creditlink:
-published: false
+published: True
 ---
 
 #### Time : 2022-8-25
