--- a/_posts/Archives/2022-2-13-Blog35-pytorch-01.md
+++ b/_posts/Archives/2022-2-13-Blog35-pytorch-01.md
@@ -3,7 +3,7 @@
 layout: post
 title: "pytorch-lecture-01"
 categories: Archives
-tags: [pytorch]
+tags: [documentation,pytorch]
 image:
  feature:
  teaser:
