--- a/_posts/Archives/2022-8-26-Blog37_react-02.md
+++ b/_posts/Archives/2022-8-26-Blog37_react-02.md
@@ -1,7 +1,7 @@
 ---
 
 layout: post
-title: "react day2 "
+title: "react day2"
 categories: Archives
 tags: [documentation,react]
 image:
@@ -9,7 +9,7 @@ image:
  teaser:
  credit:
  creditlink:
-published: false
+published: True
 ---
 
 #### Time : 2022-8-25
